# Interpretable-Chinese-UD-Tokenization-via-Boundary-Classification-and-Multi-Treebank-Validation

ud-boundary-tokenization/: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
ud-boundary-tokenization/data/: README.md
ud-boundary-tokenization/docs/: reproducibility.md
ud-boundary-tokenization/results/: ablation_summary.csv  boundary_error_summary.csv  downstream_bootstrap_ci.csv  multitreebank_downstream_summary.csv  paper_key_deltas.csv  threshold_curves.csv
ud-boundary-tokenization/scripts/: make_chapter5_figures.py  run_experiments.py
ud-boundary-tokenization/src/ud_boundary_tokenization/: __init__.py  experiment.py
